# prosel-ecompjr

./: README.md
server/: .env.example  Dockerfile  docker-compose.yaml  init.sql  nginx.conf  pyproject.toml  requirements.txt
server/app/: database.py  envs.py  main.py
server/app/libs/: crypto.py  security.py
server/app/models/: forms.py  user.py
server/app/repositories/: form_repository.py  user_repository.py
server/app/routers/: forms_routes.py  user_routes.py
server/app/routes/: user_routes.py
server/app/schemas/: schemas.py
web/: .eslintrc.cjs  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1698710020581-0a27d56e40757.mjs
web/src/: index.css  main.tsx
web/src/components/: button.tsx  confirmation-dialog.tsx  contact-form.tsx  create-user-form.tsx  footer.tsx  form-card.tsx  form-list.tsx  form.tsx  navbar-dashboard.tsx  navbar.tsx  scroll-to-hash-element.tsx  update-user-form.tsx  user-card.tsx  user-list.tsx
web/src/components/layouts/: about-us.tsx  contact.tsx  forms-layout.tsx  mission-vision-values.tsx  our-services.tsx
web/src/components/skeletons/: form-card-skeleton.tsx  user-card-skeleton.tsx
web/src/components/ui/: scroll-area.tsx
web/src/constants/: query.ts
web/src/lib/: auth.ts
web/src/pages/: error.tsx
web/src/pages/dashboard/: dashboard.tsx  root.tsx  (+2 more)
web/src/router/: index.tsx
web/src/routes/: dashboard.tsx  dashboardRoot.tsx  home.tsx  login.tsx  root.tsx  router.ts
web/src/schemas/: form-schema.ts  user-schema.ts
web/src/services/: api.ts
(+9 files in other folders)
